# llama.cpp

ggml/: CMakeLists.txt
ggml/include/: ggml-ac4k.h
ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp
ggml/src/ggml-ac4k/: CMakeLists.txt  README.md  acc.cu  acc.cuh  add-id.cu  add-id.cuh  arange.cu  arange.cuh  argmax.cu  argmax.cuh  argsort.cu  argsort.cuh  binbcast.cu  binbcast.cuh  clamp.cu  clamp.cuh  common.cuh  concat.cu  concat.cuh  conv-transpose-1d.cu  conv-transpose-1d.cuh  conv2d-dw.cu  conv2d-dw.cuh  conv2d-transpose.cu  conv2d-transpose.cuh  conv2d.cu  conv2d.cuh  convert.cu  convert.cuh  count-equal.cu  count-equal.cuh  cp-async.cuh  cpy-utils.cuh  cpy.cu  cpy.cuh  cross-entropy-loss.cu  cross-entropy-loss.cuh  diagmask.cu  diagmask.cuh  fattn-common.cuh  (+73 more)
tools/cvector-generator/: cvector-generator.cpp  pca.hpp
